Adding Launch file

--- a/ros_ads_node/CMakeLists.txt
+++ b/ros_ads_node/CMakeLists.txt
@@ -34,8 +34,13 @@ install(TARGETS ${PROJECT_NAME}
 )
 
 install(DIRECTORY
-  launch config
-  DESTINATION share/${PROJECT_NAME}/)
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+install(DIRECTORY
+  config
+  DESTINATION share/${PROJECT_NAME}
+)
   
 ament_package()
 
