--- a/ros_ads_node/package.xml
+++ b/ros_ads_node/package.xml
@@ -11,6 +11,8 @@
   <license>MIT</license>
 
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
+
   <depend>std_msgs</depend>
   <depend>ros_ads_msgs</depend>
   <depend>ros_ads_decode</depend>
